// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`input label label should have a htmlFor prop equals to the used id 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-1 {
  display: inline-block;
  margin-bottom: 0rem;
  margin-top: 0rem;
}

.emotion-1:first-of-type {
  margin-top: 0;
}

.emotion-1:last-of-type {
  margin-bottom: 0;
}

.emotion-1:empty {
  display: none;
}

.emotion-3 {
  font-weight: bold;
  display: block;
  margin-bottom: 0.25rem;
  line-height: 20px;
}

.emotion-5 {
  position: relative;
}

.emotion-5 input {
  padding-right: 3rem;
}

.emotion-6 {
  background-color: #FFFFFF;
  border: solid 1px #8F8FA2;
  border-radius: 2px;
  color: #24252E;
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1rem;
  margin: 0;
  padding: calc(0.5rem - 1px) 0.5rem;
  width: 100%;
  transition-property: box-shadow;
  transition-duration: .2s;
}

.emotion-6[type="search"]::-webkit-search-decoration {
  display: none;
}

.emotion-6[type="search"]::-webkit-search-cancel-button {
  display: none;
}

.emotion-6[type="search"]::-webkit-search-results-button {
  display: none;
}

.emotion-6[type="search"]::-webkit-search-results-decoration {
  display: none;
}

.emotion-6:required {
  box-shadow: none;
}

.emotion-6::-webkit-input-placeholder {
  color: #696979;
}

.emotion-6::-moz-placeholder {
  color: #696979;
}

.emotion-6:-ms-input-placeholder {
  color: #696979;
}

.emotion-6::placeholder {
  color: #696979;
}

.emotion-6:disabled {
  border-color: #D3D4DD;
  background-color: #F0F0F5;
}

.emotion-6:not(:disabled):hover {
  border-color: #7A7B8E;
}

.emotion-6:not(:disabled):focus {
  outline: none;
  box-shadow: 0 0 0 2px #F0F0F5,0 0 0 4px #0069D0;
}

.emotion-6:not(:disabled):active {
  border-color: #0069D0;
  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.09);
}

.emotion-7 {
  position: absolute;
  background-color: #F0F0F5;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  padding: 0.25rem;
  width: 2.5rem;
  top: 1px;
  bottom: 1px;
  right: 1px;
}

.emotion-8 {
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1.5rem;
  color: #24252E;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: all .2s;
  transition: all .2s;
  font-weight: bold;
  cursor: pointer;
  background-color: transparent;
  border: 1px solid transparent;
  border-radius: 4px;
  color: #24252E;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 0.875rem;
  padding: calc(0.25rem - 1px) calc(0.5rem - 1px);
  border-radius: inherit;
}

.emotion-8>span {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-8:not(:disabled):active {
  box-shadow: inset 0 2px 8px 0 rgba(0, 0, 0, 0.1);
}

.emotion-8:focus {
  outline: none;
  box-shadow: 0 0 0 2px #0069D0;
}

.emotion-8:not(:disabled):hover {
  background-color: rgba(58, 58, 71, 0.1);
}

.emotion-8:focus {
  box-shadow: none;
}

.emotion-9 {
  fill: currentColor;
  font-size: 1.5rem;
}

<div>
  <div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <label
          class="emotion-3"
          for="foo"
        >
          Foo
        </label>
        <div
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-labelledby="downshift-16-label"
          class="emotion-4"
          role="combobox"
        >
          <div>
            <div
              class="emotion-5"
            >
              <input
                aria-autocomplete="list"
                class="emotion-6"
                id="downshift-16-input"
                placeholder="Select a value..."
                type="text"
                value=""
              />
              <span
                class="emotion-7"
              >
                <button
                  class="emotion-8"
                  tabindex="-1"
                  type="button"
                >
                  <span>
                    <svg
                      aria-hidden="true"
                      class="emotion-9"
                      height="1em"
                      role="img"
                      viewBox="0 0 24 24"
                      width="1em"
                    >
                      <path
                        clip-rule="evenodd"
                        d="M16.294 8.294a1 1 0 111.414 1.414l-5 5a1 1 0 01-1.414 0l-5.001-5a1 1 0 011.414-1.415l4.294 4.294 4.293-4.293z"
                      />
                    </svg>
                  </span>
                </button>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`input label should use aria-labelledby equals to an auto-assigned label id, if "id" is not provided 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-1 {
  display: inline-block;
  margin-bottom: 0rem;
  margin-top: 0rem;
}

.emotion-1:first-of-type {
  margin-top: 0;
}

.emotion-1:last-of-type {
  margin-bottom: 0;
}

.emotion-1:empty {
  display: none;
}

.emotion-3 {
  font-weight: bold;
  display: block;
  margin-bottom: 0.25rem;
  line-height: 20px;
}

.emotion-5 {
  position: relative;
}

.emotion-5 input {
  padding-right: 3rem;
}

.emotion-6 {
  background-color: #FFFFFF;
  border: solid 1px #8F8FA2;
  border-radius: 2px;
  color: #24252E;
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1rem;
  margin: 0;
  padding: calc(0.5rem - 1px) 0.5rem;
  width: 100%;
  transition-property: box-shadow;
  transition-duration: .2s;
}

.emotion-6[type="search"]::-webkit-search-decoration {
  display: none;
}

.emotion-6[type="search"]::-webkit-search-cancel-button {
  display: none;
}

.emotion-6[type="search"]::-webkit-search-results-button {
  display: none;
}

.emotion-6[type="search"]::-webkit-search-results-decoration {
  display: none;
}

.emotion-6:required {
  box-shadow: none;
}

.emotion-6::-webkit-input-placeholder {
  color: #696979;
}

.emotion-6::-moz-placeholder {
  color: #696979;
}

.emotion-6:-ms-input-placeholder {
  color: #696979;
}

.emotion-6::placeholder {
  color: #696979;
}

.emotion-6:disabled {
  border-color: #D3D4DD;
  background-color: #F0F0F5;
}

.emotion-6:not(:disabled):hover {
  border-color: #7A7B8E;
}

.emotion-6:not(:disabled):focus {
  outline: none;
  box-shadow: 0 0 0 2px #F0F0F5,0 0 0 4px #0069D0;
}

.emotion-6:not(:disabled):active {
  border-color: #0069D0;
  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.09);
}

.emotion-7 {
  position: absolute;
  background-color: #F0F0F5;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  padding: 0.25rem;
  width: 2.5rem;
  top: 1px;
  bottom: 1px;
  right: 1px;
}

.emotion-8 {
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1.5rem;
  color: #24252E;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: all .2s;
  transition: all .2s;
  font-weight: bold;
  cursor: pointer;
  background-color: transparent;
  border: 1px solid transparent;
  border-radius: 4px;
  color: #24252E;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 0.875rem;
  padding: calc(0.25rem - 1px) calc(0.5rem - 1px);
  border-radius: inherit;
}

.emotion-8>span {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-8:not(:disabled):active {
  box-shadow: inset 0 2px 8px 0 rgba(0, 0, 0, 0.1);
}

.emotion-8:focus {
  outline: none;
  box-shadow: 0 0 0 2px #0069D0;
}

.emotion-8:not(:disabled):hover {
  background-color: rgba(58, 58, 71, 0.1);
}

.emotion-8:focus {
  box-shadow: none;
}

.emotion-9 {
  fill: currentColor;
  font-size: 1.5rem;
}

<div>
  <div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <label
          class="emotion-3"
          id="label-abc"
        >
          test
        </label>
        <div
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-labelledby="label-abc"
          class="emotion-4"
          role="combobox"
        >
          <div>
            <div
              class="emotion-5"
            >
              <input
                aria-autocomplete="list"
                aria-labelledby="label-abc"
                class="emotion-6"
                id="downshift-17-input"
                placeholder="Select a value..."
                type="text"
                value=""
              />
              <span
                class="emotion-7"
              >
                <button
                  class="emotion-8"
                  tabindex="-1"
                  type="button"
                >
                  <span>
                    <svg
                      aria-hidden="true"
                      class="emotion-9"
                      height="1em"
                      role="img"
                      viewBox="0 0 24 24"
                      width="1em"
                    >
                      <path
                        clip-rule="evenodd"
                        d="M16.294 8.294a1 1 0 111.414 1.414l-5 5a1 1 0 01-1.414 0l-5.001-5a1 1 0 011.414-1.415l4.294 4.294 4.293-4.293z"
                      />
                    </svg>
                  </span>
                </button>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`should render correctly when closed 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-1 {
  display: inline-block;
  margin-bottom: 0rem;
  margin-top: 0rem;
}

.emotion-1:first-of-type {
  margin-top: 0;
}

.emotion-1:last-of-type {
  margin-bottom: 0;
}

.emotion-1:empty {
  display: none;
}

.emotion-4 {
  position: relative;
}

.emotion-4 input {
  padding-right: 3rem;
}

.emotion-5 {
  background-color: #FFFFFF;
  border: solid 1px #8F8FA2;
  border-radius: 2px;
  color: #24252E;
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1rem;
  margin: 0;
  padding: calc(0.5rem - 1px) 0.5rem;
  width: 100%;
  transition-property: box-shadow;
  transition-duration: .2s;
}

.emotion-5[type="search"]::-webkit-search-decoration {
  display: none;
}

.emotion-5[type="search"]::-webkit-search-cancel-button {
  display: none;
}

.emotion-5[type="search"]::-webkit-search-results-button {
  display: none;
}

.emotion-5[type="search"]::-webkit-search-results-decoration {
  display: none;
}

.emotion-5:required {
  box-shadow: none;
}

.emotion-5::-webkit-input-placeholder {
  color: #696979;
}

.emotion-5::-moz-placeholder {
  color: #696979;
}

.emotion-5:-ms-input-placeholder {
  color: #696979;
}

.emotion-5::placeholder {
  color: #696979;
}

.emotion-5:disabled {
  border-color: #D3D4DD;
  background-color: #F0F0F5;
}

.emotion-5:not(:disabled):hover {
  border-color: #7A7B8E;
}

.emotion-5:not(:disabled):focus {
  outline: none;
  box-shadow: 0 0 0 2px #F0F0F5,0 0 0 4px #0069D0;
}

.emotion-5:not(:disabled):active {
  border-color: #0069D0;
  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.09);
}

.emotion-6 {
  position: absolute;
  background-color: #F0F0F5;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  padding: 0.25rem;
  width: 2.5rem;
  top: 1px;
  bottom: 1px;
  right: 1px;
}

.emotion-7 {
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1.5rem;
  color: #24252E;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: all .2s;
  transition: all .2s;
  font-weight: bold;
  cursor: pointer;
  background-color: transparent;
  border: 1px solid transparent;
  border-radius: 4px;
  color: #24252E;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 0.875rem;
  padding: calc(0.25rem - 1px) calc(0.5rem - 1px);
  border-radius: inherit;
}

.emotion-7>span {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-7:not(:disabled):active {
  box-shadow: inset 0 2px 8px 0 rgba(0, 0, 0, 0.1);
}

.emotion-7:focus {
  outline: none;
  box-shadow: 0 0 0 2px #0069D0;
}

.emotion-7:not(:disabled):hover {
  background-color: rgba(58, 58, 71, 0.1);
}

.emotion-7:focus {
  box-shadow: none;
}

.emotion-8 {
  fill: currentColor;
  font-size: 1.5rem;
}

<div>
  <div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <div
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-labelledby="downshift-0-label"
          class="emotion-3"
          role="combobox"
        >
          <div>
            <div
              class="emotion-4"
            >
              <input
                aria-autocomplete="list"
                class="emotion-5"
                id="downshift-0-input"
                placeholder="Select a value..."
                type="text"
                value=""
              />
              <span
                class="emotion-6"
              >
                <button
                  class="emotion-7"
                  tabindex="-1"
                  type="button"
                >
                  <span>
                    <svg
                      aria-hidden="true"
                      class="emotion-8"
                      height="1em"
                      role="img"
                      viewBox="0 0 24 24"
                      width="1em"
                    >
                      <path
                        clip-rule="evenodd"
                        d="M16.294 8.294a1 1 0 111.414 1.414l-5 5a1 1 0 01-1.414 0l-5.001-5a1 1 0 011.414-1.415l4.294 4.294 4.293-4.293z"
                      />
                    </svg>
                  </span>
                </button>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`should render correctly when opened 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-1 {
  display: inline-block;
  margin-bottom: 0rem;
  margin-top: 0rem;
}

.emotion-1:first-of-type {
  margin-top: 0;
}

.emotion-1:last-of-type {
  margin-bottom: 0;
}

.emotion-1:empty {
  display: none;
}

.emotion-4 {
  position: relative;
}

.emotion-4 input {
  padding-right: 3rem;
}

.emotion-5 {
  background-color: #FFFFFF;
  border: solid 1px #8F8FA2;
  border-radius: 2px;
  color: #24252E;
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1rem;
  margin: 0;
  padding: calc(0.5rem - 1px) 0.5rem;
  width: 100%;
  transition-property: box-shadow;
  transition-duration: .2s;
}

.emotion-5[type="search"]::-webkit-search-decoration {
  display: none;
}

.emotion-5[type="search"]::-webkit-search-cancel-button {
  display: none;
}

.emotion-5[type="search"]::-webkit-search-results-button {
  display: none;
}

.emotion-5[type="search"]::-webkit-search-results-decoration {
  display: none;
}

.emotion-5:required {
  box-shadow: none;
}

.emotion-5::-webkit-input-placeholder {
  color: #696979;
}

.emotion-5::-moz-placeholder {
  color: #696979;
}

.emotion-5:-ms-input-placeholder {
  color: #696979;
}

.emotion-5::placeholder {
  color: #696979;
}

.emotion-5:disabled {
  border-color: #D3D4DD;
  background-color: #F0F0F5;
}

.emotion-5:not(:disabled):hover {
  border-color: #7A7B8E;
}

.emotion-5:not(:disabled):focus {
  outline: none;
  box-shadow: 0 0 0 2px #F0F0F5,0 0 0 4px #0069D0;
}

.emotion-5:not(:disabled):active {
  border-color: #0069D0;
  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.09);
}

.emotion-6 {
  position: absolute;
  background-color: #F0F0F5;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  padding: 0.25rem;
  width: 2.5rem;
  top: 1px;
  bottom: 1px;
  right: 1px;
}

.emotion-7 {
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1.5rem;
  color: #24252E;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: all .2s;
  transition: all .2s;
  font-weight: bold;
  cursor: pointer;
  background-color: transparent;
  border: 1px solid transparent;
  border-radius: 4px;
  color: #24252E;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 0.875rem;
  padding: calc(0.25rem - 1px) calc(0.5rem - 1px);
  border-radius: inherit;
}

.emotion-7>span {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-7:not(:disabled):active {
  box-shadow: inset 0 2px 8px 0 rgba(0, 0, 0, 0.1);
}

.emotion-7:focus {
  outline: none;
  box-shadow: 0 0 0 2px #0069D0;
}

.emotion-7:not(:disabled):hover {
  background-color: rgba(58, 58, 71, 0.1);
}

.emotion-7:focus {
  box-shadow: none;
}

.emotion-8 {
  fill: currentColor;
  font-size: 1.5rem;
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  z-index: 1300;
  border: 1px solid #D3D4DD;
  border-radius: 2px;
  background-color: #FFFFFF;
  box-shadow: 0 2px 4px -1px rgba(0, 0, 0, 0.2),0 1px 10px 0 rgba(0, 0, 0, 0.12),0 4px 5px 0 rgba(0, 0, 0, 0.14);
  max-height: 20rem;
}

.emotion-10 {
  list-style: none;
  margin: 0;
  padding: 0;
  border: 1px solid #D3D4DD;
  border-radius: 2px;
  background-color: #FFFFFF;
  box-shadow: 0 2px 4px -1px rgba(0, 0, 0, 0.2),0 1px 10px 0 rgba(0, 0, 0, 0.12),0 4px 5px 0 rgba(0, 0, 0, 0.14);
  max-height: 20rem;
  overflow-y: auto;
  overflow-x: hidden;
  width: 100%;
  z-index: 1300;
  z-index: auto;
  border: 0;
  border-radius: 0;
  box-shadow: none;
  max-height: auto;
}

.emotion-11 {
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1.5;
  color: #24252E;
  border-bottom: 1px solid #D3D4DD;
  cursor: pointer;
  padding: 0.5rem 0.5rem;
  -webkit-transition: .1s ease;
  transition: .1s ease;
}

.emotion-11:last-of-type {
  border-bottom: none;
}

.emotion-11:hover {
  background: #F0F0F5;
}

.emotion-11:focus {
  outline: 0;
  border-radius: 3px;
  box-shadow: inset 0 0 0 2px #0069D0;
}

<div>
  <div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <div
          aria-expanded="true"
          aria-haspopup="listbox"
          aria-labelledby="downshift-1-label"
          aria-owns="downshift-1-menu"
          class="emotion-3"
          role="combobox"
        >
          <div>
            <div
              class="emotion-4"
            >
              <input
                aria-autocomplete="list"
                aria-controls="downshift-1-menu"
                class="emotion-5"
                id="downshift-1-input"
                placeholder="Select a value..."
                type="text"
                value=""
              />
              <span
                class="emotion-6"
              >
                <button
                  class="emotion-7"
                  tabindex="-1"
                  type="button"
                >
                  <span>
                    <svg
                      aria-hidden="true"
                      class="emotion-8"
                      height="1em"
                      role="img"
                      viewBox="0 0 24 24"
                      width="1em"
                    >
                      <path
                        clip-rule="evenodd"
                        d="M7.707 14.707a1 1 0 11-1.414-1.414l5-5a1 1 0 011.414 0l5.001 5.001a1 1 0 01-1.414 1.414L12 10.414l-4.293 4.293z"
                      />
                    </svg>
                  </span>
                </button>
              </span>
            </div>
          </div>
          <div
            aria-labelledby="downshift-1-label"
            class="emotion-9"
            id="downshift-1-menu"
            role="listbox"
            style="position: absolute; left: 0px; top: 0px; width: 0px;"
          >
            <ul
              class="emotion-10"
            >
              <li
                aria-selected="false"
                class="emotion-11"
                id="downshift-1-item-0"
                role="option"
              >
                Apple
              </li>
              <li
                aria-selected="false"
                class="emotion-11"
                id="downshift-1-item-1"
                role="option"
              >
                Banana
              </li>
              <li
                aria-selected="false"
                class="emotion-11"
                id="downshift-1-item-2"
                role="option"
              >
                Grape
              </li>
              <li
                aria-selected="false"
                class="emotion-11"
                id="downshift-1-item-3"
                role="option"
              >
                Orange
              </li>
              <li
                aria-selected="false"
                class="emotion-11"
                id="downshift-1-item-4"
                role="option"
              >
                Pear
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`should respect the specified menu min-width 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-1 {
  display: inline-block;
  margin-bottom: 0rem;
  margin-top: 0rem;
}

.emotion-1:first-of-type {
  margin-top: 0;
}

.emotion-1:last-of-type {
  margin-bottom: 0;
}

.emotion-1:empty {
  display: none;
}

.emotion-4 {
  position: relative;
}

.emotion-4 input {
  padding-right: 3rem;
}

.emotion-5 {
  background-color: #FFFFFF;
  border: solid 1px #8F8FA2;
  border-radius: 2px;
  color: #24252E;
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1rem;
  margin: 0;
  padding: calc(0.5rem - 1px) 0.5rem;
  width: 100%;
  transition-property: box-shadow;
  transition-duration: .2s;
}

.emotion-5[type="search"]::-webkit-search-decoration {
  display: none;
}

.emotion-5[type="search"]::-webkit-search-cancel-button {
  display: none;
}

.emotion-5[type="search"]::-webkit-search-results-button {
  display: none;
}

.emotion-5[type="search"]::-webkit-search-results-decoration {
  display: none;
}

.emotion-5:required {
  box-shadow: none;
}

.emotion-5::-webkit-input-placeholder {
  color: #696979;
}

.emotion-5::-moz-placeholder {
  color: #696979;
}

.emotion-5:-ms-input-placeholder {
  color: #696979;
}

.emotion-5::placeholder {
  color: #696979;
}

.emotion-5:disabled {
  border-color: #D3D4DD;
  background-color: #F0F0F5;
}

.emotion-5:not(:disabled):hover {
  border-color: #7A7B8E;
}

.emotion-5:not(:disabled):focus {
  outline: none;
  box-shadow: 0 0 0 2px #F0F0F5,0 0 0 4px #0069D0;
}

.emotion-5:not(:disabled):active {
  border-color: #0069D0;
  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.09);
}

.emotion-6 {
  position: absolute;
  background-color: #F0F0F5;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  padding: 0.25rem;
  width: 2.5rem;
  top: 1px;
  bottom: 1px;
  right: 1px;
}

.emotion-7 {
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1.5rem;
  color: #24252E;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: all .2s;
  transition: all .2s;
  font-weight: bold;
  cursor: pointer;
  background-color: transparent;
  border: 1px solid transparent;
  border-radius: 4px;
  color: #24252E;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 0.875rem;
  padding: calc(0.25rem - 1px) calc(0.5rem - 1px);
  border-radius: inherit;
}

.emotion-7>span {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-7:not(:disabled):active {
  box-shadow: inset 0 2px 8px 0 rgba(0, 0, 0, 0.1);
}

.emotion-7:focus {
  outline: none;
  box-shadow: 0 0 0 2px #0069D0;
}

.emotion-7:not(:disabled):hover {
  background-color: rgba(58, 58, 71, 0.1);
}

.emotion-7:focus {
  box-shadow: none;
}

.emotion-8 {
  fill: currentColor;
  font-size: 1.5rem;
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  z-index: 1300;
  border: 1px solid #D3D4DD;
  border-radius: 2px;
  background-color: #FFFFFF;
  box-shadow: 0 2px 4px -1px rgba(0, 0, 0, 0.2),0 1px 10px 0 rgba(0, 0, 0, 0.12),0 4px 5px 0 rgba(0, 0, 0, 0.14);
  max-height: 20rem;
}

.emotion-10 {
  list-style: none;
  margin: 0;
  padding: 0;
  border: 1px solid #D3D4DD;
  border-radius: 2px;
  background-color: #FFFFFF;
  box-shadow: 0 2px 4px -1px rgba(0, 0, 0, 0.2),0 1px 10px 0 rgba(0, 0, 0, 0.12),0 4px 5px 0 rgba(0, 0, 0, 0.14);
  max-height: 20rem;
  overflow-y: auto;
  overflow-x: hidden;
  width: 100%;
  z-index: 1300;
  z-index: auto;
  border: 0;
  border-radius: 0;
  box-shadow: none;
  max-height: auto;
}

.emotion-11 {
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1.5;
  color: #24252E;
  border-bottom: 1px solid #D3D4DD;
  cursor: pointer;
  padding: 0.5rem 0.5rem;
  -webkit-transition: .1s ease;
  transition: .1s ease;
}

.emotion-11:last-of-type {
  border-bottom: none;
}

.emotion-11:hover {
  background: #F0F0F5;
}

.emotion-11:focus {
  outline: 0;
  border-radius: 3px;
  box-shadow: inset 0 0 0 2px #0069D0;
}

<div>
  <div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <div
          aria-expanded="true"
          aria-haspopup="listbox"
          aria-labelledby="downshift-4-label"
          aria-owns="downshift-4-menu"
          class="emotion-3"
          role="combobox"
        >
          <div>
            <div
              class="emotion-4"
            >
              <input
                aria-autocomplete="list"
                aria-controls="downshift-4-menu"
                class="emotion-5"
                id="downshift-4-input"
                placeholder="Select a value..."
                type="text"
                value=""
              />
              <span
                class="emotion-6"
              >
                <button
                  class="emotion-7"
                  tabindex="-1"
                  type="button"
                >
                  <span>
                    <svg
                      aria-hidden="true"
                      class="emotion-8"
                      height="1em"
                      role="img"
                      viewBox="0 0 24 24"
                      width="1em"
                    >
                      <path
                        clip-rule="evenodd"
                        d="M7.707 14.707a1 1 0 11-1.414-1.414l5-5a1 1 0 011.414 0l5.001 5.001a1 1 0 01-1.414 1.414L12 10.414l-4.293 4.293z"
                      />
                    </svg>
                  </span>
                </button>
              </span>
            </div>
          </div>
          <div
            aria-labelledby="downshift-4-label"
            class="emotion-9"
            id="downshift-4-menu"
            role="listbox"
            style="position: absolute; left: 0px; top: 0px; min-width: 577px; width: 0px;"
          >
            <ul
              class="emotion-10"
            >
              <li
                aria-selected="false"
                class="emotion-11"
                id="downshift-4-item-0"
                role="option"
              >
                Apple
              </li>
              <li
                aria-selected="false"
                class="emotion-11"
                id="downshift-4-item-1"
                role="option"
              >
                Banana
              </li>
              <li
                aria-selected="false"
                class="emotion-11"
                id="downshift-4-item-2"
                role="option"
              >
                Grape
              </li>
              <li
                aria-selected="false"
                class="emotion-11"
                id="downshift-4-item-3"
                role="option"
              >
                Orange
              </li>
              <li
                aria-selected="false"
                class="emotion-11"
                id="downshift-4-item-4"
                role="option"
              >
                Pear
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
